--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,5 +1,4 @@
-<div class="jumbo">
-  <div class="right tomster"></div>
+<Jumbo>
   <h2>About Flower Shop</h2>
   <p>
     The Flower Shop website is a delightful project created to explore Ember.
@@ -7,4 +6,4 @@
     AND building Ember applications.
   </p>
   <LinkTo @route="contact" class="button">Contact Us</LinkTo>
-</div>
+</Jumbo>
