--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,5 +1,4 @@
-<div class="jumbo">
-  <div class="right tomster"></div>
+<Jumbo>
   <h2>Contact Us</h2>
   <p>
     Flower Shop Representatives would love to help you<br>
@@ -15,4 +14,4 @@
     <a href="mailto:flowershoprep@emberjs.com">flowershoprep@emberjs.com</a>
   </address>
   <LinkTo @route="about" class="button">About</LinkTo>
-</div>
+</Jumbo>
