--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,5 @@
-<div class="jumbo">
-  <div class="right tomster"></div>
+<Jumbo>
   <h2>Welcome to Flower Shop!</h2>
   <p>We hope you find exactly the bouquet you're looking for.</p>
   <LinkTo @route="about" class="button">About Us</LinkTo>
-</div>
+</Jumbo>
