--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -121,7 +121,7 @@ p {
   bottom: 5px;
 }
 
-.rentals label span {
+.arrangements label span {
   font-size: 140%;
   margin: 50px auto 20px;
   display: block;
@@ -129,7 +129,7 @@ p {
   font-style: italic;
 }
 
-.rentals input {
+.arrangements input {
   padding: 11px;
   font-size: 18px;
   width: 500px;
@@ -224,10 +224,10 @@ p {
 }
 
 /**
- * Individual Rental Listing
+ * Individual arrangement Listing
  */
 
-.rental {
+.arrangement {
   margin-top: 15px;
   background-color: #f6f6f6;
   padding: 20px 25px;
@@ -237,22 +237,22 @@ p {
   flex-wrap: wrap;
 }
 
-.rental:hover {
+.arrangement:hover {
   background-color: #f3f3f3;
 }
 
-.rental img {
+.arrangement img {
   border-radius: 5px;
 }
 
-.rental .image {
+.arrangement .image {
   flex-grow: 0;
   flex-basis: 150px;
   margin: 20px 25px;
   text-align: center;
 }
 
-.rental button.image {
+.arrangement button.image {
   position: relative;
   cursor: pointer;
   border: none;
@@ -260,11 +260,11 @@ p {
   z-index: 1;
 }
 
-.rental button.image:focus {
+.arrangement button.image:focus {
   outline: none;
 }
 
-.rental button.image::after {
+.arrangement button.image::after {
   content: "";
   position: absolute;
   top: 0;
@@ -280,21 +280,21 @@ p {
   transition: opacity 0.25s ease-in-out;
 }
 
-.rental button.image:focus::after,
-.rental button.image:hover::after {
+.arrangement button.image:focus::after,
+.arrangement button.image:hover::after {
   opacity: 0.1;
 }
 
-.rental .image img {
+.arrangement .image img {
   max-width: 100%;
 }
 
-.rental .image.large {
+.arrangement .image.large {
   margin: 30px 25px 50px;
   flex-basis: 100%;
 }
 
-.rental .image small {
+.arrangement .image small {
   display: block;
   margin-top: 5px;
   margin-bottom: -15px;
@@ -305,13 +305,13 @@ p {
   position: relative;
 }
 
-.rental .image.large small {
+.arrangement .image.large small {
   margin-top: 10px;
   margin-bottom: 0;
   font-size: 110%;
 }
 
-.rental .details {
+.arrangement .details {
   flex-basis: 50%;
   flex-grow: 2;
   display: flex;
@@ -321,109 +321,109 @@ p {
   flex-wrap: wrap;
 }
 
-.rental h3 {
+.arrangement h3 {
   flex-basis: 100%;
 }
 
-.rental h3 a {
+.arrangement h3 a {
   display: inline;
 }
 
-.rental .detail {
+.arrangement .detail {
   flex-basis: 50%;
   font-weight: 300;
   font-style: italic;
   white-space: nowrap;
 }
 
-.rental .detail span {
+.arrangement .detail span {
   font-weight: 400;
   font-style: normal;
 }
 
-.rental .map {
+.arrangement .map {
   flex-grow: 0;
   flex-basis: 150px;
   font-size: 0;
   margin: 0 25px;
 }
 
-.rental .map img {
+.arrangement .map img {
   width: 150px;
   height: 150px;
 }
 
-.rental.detailed {
+.arrangement.detailed {
   background: none;
   align-items: flex-start;
 }
 
-.rental.detailed .image {
+.arrangement.detailed .image {
   flex-basis: 320px;
 }
 
-.rental.detailed .image.large {
+.arrangement.detailed .image.large {
   margin: 30px 25px 50px;
   flex-basis: 100%;
 }
 
-.rental.detailed .details {
+.arrangement.detailed .details {
   height: auto;
 }
 
-.rental.detailed h3 {
+.arrangement.detailed h3 {
   font-size: 200%;
   margin-bottom: 10px;
 }
 
-.rental.detailed .detail {
+.arrangement.detailed .detail {
   margin: 5px 0;
   flex-basis: 100%;
   flex-shrink: 2;
 }
 
-.rental.detailed .description {
+.arrangement.detailed .description {
   white-space: normal;
   flex-basis: 100%;
   flex-shrink: 1;
 }
 
-.rental.detailed .map {
+.arrangement.detailed .map {
   flex-basis: 100%;
   margin: 50px 25px 25px;
 }
 
-.rental.detailed .map img {
+.arrangement.detailed .map img {
   width: 100%;
   height: auto;
 }
 
 @media only screen and (max-width: 919px) {
-  .rental.detailed .image,
-  .rental.detailed .image.large {
+  .arrangement.detailed .image,
+  .arrangement.detailed .image.large {
     margin: 30px 25px 25px;
     flex-basis: 100%;
     cursor: default;
   }
 
-  .rental.detailed .image:hover {
+  .arrangement.detailed .image:hover {
     flex-basis: 100%;
     cursor: default;
   }
 
-  .rental.detailed .image small {
+  .arrangement.detailed .image small {
     display: none;
   }
 
-  .rental.detailed button.image:hover::after {
+  .arrangement.detailed button.image:hover::after {
     opacity: 0;
   }
 
-  .rental.detailed button.image:focus::after {
+  .arrangement.detailed button.image:focus::after {
     opacity: 0.1;
   }
 
-  .rental.detailed .map {
+  .arrangement.detailed .map {
     margin-top: 25px;
   }
 }
